--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,8 @@ reference:
   ## Configurations
   android_config: &android_config
     working_directory: *workspace
+    docker:
+      image: circleci/android:api-28
     shell: /bin/bash --login -eo pipefail
     environment:
       TERM: dumb
