--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,39 +1,29 @@
 version: 2
-reference:
-  ## Constants
-  gradle_cache_path: &gradle_cache_path
-    gradle_cache-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-  workspace: &workspace
-    ~/src
-  ## Configurations
-  android_config: &android_config
-    working_directory: *workspace
-    docker:
-      image: circleci/android:api-28
-    shell: /bin/bash --login -eo pipefail
-    environment:
-      TERM: dumb
-      JVM_OPTS: -Xmx3200m
-  ## Cache
-  restore_gradle_cache: &restore_gradle_cache
-    restore_cache:
-      key: *gradle_cache_path
-  save_gradle_cache: &save_gradle_cache
-    save_cache:
-      key: *gradle_cache_path
-      paths:
-        - ~/.gradle
-
-  ## Dependency Downloads
-  download_android_dependencies: &download_android_dependencies
-    run:
-      name: Download Android Dependencies
-      command: ./gradlew androidDependencies
-
 jobs:
-  ui_test:
-    <<: *android_config
+  build:
+    working_directory: ~/code
+    docker:
+      - image: circleci/android:api-28
+    environment:
+      JVM_OPTS: -Xmx3200m
     steps:
+      - checkout
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Chmod permissions 
+          #if permission for Gradlew Dependencies fail, use this.
+          command: sudo chmod +x ./gradlew
+      - run:
+          name: Download Dependencies
+          command: ./gradlew androidDependencies
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Run Tests
+          command: ./gradlew lint test
       - checkout
       - run:
           name: Setup environment variables
@@ -52,18 +42,20 @@ jobs:
       - run:
           name: Install emulator dependencies
           command: (yes | sdkmanager "platform-tools" "platforms;android-26" "extras;intel;Hardware_Accelerated_Execution_Manager" "build-tools;26.0.0" "system-images;android-26;google_apis;x86" "emulator" --verbose) || true
-      - *restore_gradle_cache
-      - run:
-          name: Chmod permissions 
-          #if permission for Gradlew Dependencies fail, use this.
-          command: sudo chmod +x ./gradlew
-      - *download_android_dependencies
-      - *save_gradle_cache
       - run: avdmanager create avd -n Pixel_2_API_26 -k "system-images;android-26;google_apis;x86" -g google_apis -d "Nexus 5"
       - run:
           name: Run emulator in background
           command: /usr/local/share/android-sdk/tools/emulator @Pixel_2_API_26 -skin 1080x2066 -memory 2048 -noaudio
           background: true
       - run:
-          name: Run Tests
-          command: ./gradlew app:connectedAndroidTest
+          name: Run UnitTests
+          command: ./gradlew testDebugUnitTest
+      - run:
+          name: Run EspressoTests
+          command: ./gradlew connectedDebugAndroidTest
+      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
+          path: app/build/reports
+          destination: reports
+      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
+          path: app/build/test-results
+      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
