--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,12 @@ jobs:
           name: Run UnitTest
           command: ./gradlew test
       - run:
+          name: Accept Licences
+          command: run: yes | sdkmanager --licenses || exit 0
+      - run: 
+          name: Updates
+          command: yes | sdkmanager --update || exit 0
+      - run:
           name: Setup emulator
           command: sdkmanager "system-images;android-21;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-21;default;armeabi-v7a"
       - run:
