--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           command: ./gradlew test
       - run:
           name: Accept Licences
-          command: run: yes | sdkmanager --licenses || exit 0
+          command: yes | sdkmanager --licenses || exit 0
       - run: 
           name: Updates
           command: yes | sdkmanager --update || exit 0
