--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,8 +41,9 @@ jobs:
             sudo gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
       - run:
           name: Test with Firebase Test Lab
-          command: |
-            sudo gcloud firebase test android run \ 
+          command: >
+            sudo gcloud firebase test android run \
+              --type instrumentation
               --app ${APK_PATH} \ 
               --test ${TEST_APK_PATH} \ 
               --results-bucket cloud-test-${GOOGLE_PROJECT_ID}
