--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,8 +43,8 @@ jobs:
           name: Test with Firebase Test Lab
           command: >
             sudo gcloud firebase test android run \
-              --app=${APK_PATH} \ 
-              --test=${TEST_APK_PATH} \ 
+              --app: ${APK_PATH} \ 
+              --test: ${TEST_APK_PATH} \ 
               --results-bucket cloud-test-${GOOGLE_PROJECT_ID}
       - run:
           name: Install gsutil dependency and copy test results data
