--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,8 @@ jobs:
           name: Install gsutil dependency and copy test results data
           command: |
             sudo pip install -U crcmod
-            sudo gsutil -m cp -r -U `sudo gsutil ls gs://[BUCKET_NAME]/[OBJECT_NAME] | tail -1` ${CIRCLE_ARTIFACTS}/ | true
+            mkdir -p ~/gsutil/
+            sudo gsutil -m cp -r -U `sudo gsutil ls gs:// ${GOOGLE_PROJECT_ID} | tail -1` ~/gsutil/ | true
          # - run:
         #  name: Setup emulator
        #   command: sdkmanager "system-images;android-21;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-21;default;armeabi-v7a"
