--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,8 +46,7 @@ jobs:
           name: Install gsutil dependency and copy test results data
           command: |
             sudo pip install -U crcmod
-            mkdir -p ~/gsutil/
-            sudo gsutil -m cp -r -U `sudo gsutil ls gs://androiddemo-598cf.appspot.com | tail -1` ~/gsutil/ | true
+            sudo gsutil -m cp -r -U `sudo gsutil ls gs://androiddemo-598cf.appspot.com | tail -1` app/build/test-results | true
          # - run:
         #  name: Setup emulator
        #   command: sdkmanager "system-images;android-21;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-21;default;armeabi-v7a"
